# tp

./: CLAUDE.md  README.md  pyproject.toml
src/tp/: adapter.py  config.py  hashing.py  manifest.py  microtrade_config.py  pipeline.py  transport.py
tests/: conftest.py  test_adapter_integration.py  test_config.py  test_hashing.py  test_manifest.py  test_microtrade_config.py  test_pipeline_plan.py  test_pipeline_run.py
